compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/UnitAsTypeAliasActualization.java
public final class Usage /* mypack.Usage*/ {
  @org.jetbrains.annotations.NotNull()
  private final @org.jetbrains.annotations.NotNull() kotlin.Unit prop;

  @org.jetbrains.annotations.NotNull()
  public final @org.jetbrains.annotations.NotNull() kotlin.Unit getProp();//  getProp()

  @org.jetbrains.annotations.Nullable()
  public final @org.jetbrains.annotations.Nullable() kotlin.Unit getNullableProperty();//  getNullableProperty()

  public  Usage();//  .ctor()

  public final void foo();//  foo()

  public final void usage(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() kotlin.Unit);//  usage(@org.jetbrains.annotations.NotNull() kotlin.Unit)
}
